--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -33,12 +33,14 @@ video {
 }
 
 h1 {
-  font-size: 1.4rem;
+  font-size: 3rem;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 p {
+  font-size: 1rem;
   word-break: break-word;
-  hyphens: auto;
 }
 
 textarea {
