--- a/src/components/Typewriter/Typewriter.scss
+++ b/src/components/Typewriter/Typewriter.scss
@@ -6,10 +6,22 @@
   overflow: hidden;
   border-right: 0.15em solid black;
   white-space: nowrap;
-  margin: 0 auto;
+  margin: 0;
   letter-spacing: 0.15em;
   animation: typing 3.5s steps(40, end),
     blink-caret 0.75s step-end infinite;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 2px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background-color: #bcfd4c;
+    height: 1px;
+  }
 }
 
 @keyframes typing {
