--- a/src/components/Dots/Dots.scss
+++ b/src/components/Dots/Dots.scss
@@ -2,10 +2,11 @@
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -5rem;
   width: 100%;
   height: auto;
   z-index: -100;
+  top: -300px;
+  min-width: 1400px;
 }
 
 #pathMain {
